2005-11-11  Nick Clifton  <nickc@redhat.com>

	PR 1150
	* readelf.c (get_mips_symbol_other): New function.
	(get_symbol_other): New function.
	(process_symbol_table): Call get_symbol_other() to get a
	description of the st_other field if it contains more information
	than just the visibility.

2005-11-07  Steve Ellcey  <sje@cup.hp.com>

	* configure: Regenerate after modifying bfd/warning.m4.

2005-10-30  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerated.

	* dep-in.sed: Replace " ./" with " ".

2005-10-25  Alan Modra  <amodra@bigpond.net.au>

	* po/POTFILES.in: Regenerate.
	* po/binutils.pot: Regenerate.

2005-10-24  Bernd Schmidt  <bernd.schmidt@analog.com>

	* MAINTAINERS: Add self as BFIN maintainer.

2005-10-18  Jie Zhang  <jie.zhang@analog.com>

	* MAINTAINERS: Add self as BFIN maintainer.

2005-10-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* rclex.l (handle quotes): Stop parsing hex notation escaped
	chars after the first two digits,

2005-10-11  Nick Clifton  <nickc@redhat.com>

	PR binutils/1437
	* cxxfilt.c (flags): Remove DMGL_TYPES;
	(long_options): Rename --no-types to --types.
	(usage): Likewise.
	(demangle_it): Add a comment describing why _ and $ prefixes are
	skipped.  Use printf rather than puts to emit the demangled output
	in order to avoid emitting a new line character.
	(main): Have the -t flag enable type demangling.
	Emit a newline after every demangled command line argument.
	Copy whitespace from stdin to stdout.
	* doc/binutils.texi (c++filt): Document the change to the -t
	switch.
	Document why demangling names on the command line is slightly
	different to demangling names read from the standard input.

2005-10-10  Mark Mitchell  <mark@codesourcery.com>

	* doc/Makefile.am (config.texi): Set top_srcdir.
	* doc/Makefile.in: Regenerated.
	* doc/binutils.texi: Use at-file.texi from libiberty.

2005-10-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/1436
	* readelf.c (ABSADDR): New.